<resources>
    <string name="app_name">Notepad</string>
    <string name="todo">TODO</string>
    <string name="Notes">Notes</string>
    <string name="search_todo_hint">search task</string>
    <string name="search_notes_hint">search notes</string>
    <string name="hint_task">Task</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Content</string>
    <string name="delete_text_view">Delete?</string>
    <string name="no_button">No</string>
    <string name="yes_button">Yes</string>
    <string name="limit">Limit of task: 100</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="snack_bar_delete_todo">Task is successfully deleted</string>
    <string name="undo">Undo</string>
    <string name="channel_name">Push-notifications</string>
    <string name="date_dialog_task">Move a task to another day</string>
    <string name="date_dialog">Select date</string>
    <string name="high_priority">High priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="low_priority">Low priority</string>
    <string name="no_priority">No priority</string>
    <string name="snack_bar_delete_note">Note is successfully deleted</string>
    <string name="share">Share</string>
    <string name="redo">Redo</string>
    <string name="share_via">Share via</string>
    <string name="time_picker">TIME PICKER</string>
    <string name="okay">Okay</string>
    <string name="push_notification">Push-notifications</string>
    <string name="task_nothing_found">No tasks for today</string>
    <string name="note_nothing_found">No notes</string>
</resources>