<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_corner"
    android:backgroundTint="@color/item_enabled_background"
    tools:context=".presentation.fragments.TODOItemBottomSheetDialogFragment">

    <EditText
        android:id="@+id/taskEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_task"
        android:inputType="text|textMultiLine|textNoSuggestions"
        android:maxLength="90"
        android:maxLines="6"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/prioritySpinner"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/chipCalendar"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipCalendar" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/delete"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskEditText" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/save"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskEditText" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/orange"
        android:text="@string/cancel"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chipSave"
        app:layout_constraintStart_toEndOf="@+id/chipDelete"
        app:layout_constraintTop_toBottomOf="@+id/taskEditText" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/orange"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeImageView" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chipCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/orange"
        android:text="@string/date"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/removeImageView" />


    <TextView
        android:id="@+id/notificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="11:11"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/chipNotification"
        app:layout_constraintTop_toBottomOf="@+id/removeImageView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="23.11.2020"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeImageView" />

    <ImageView
        android:id="@+id/removeImageView"
        android:layout_width="12dp"
        android:layout_height="2dp"
        android:layout_marginTop="12dp"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@drawable/ic_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.danis.android.todo_list.presentation.CustomSpinner
        android:id="@+id/prioritySpinner"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipCalendar" />


</androidx.constraintlayout.widget.ConstraintLayout>